# bible-tracker

./: .flake8  .gitignore  .pre-commit-config.yaml  Makefile  README.md  app.py  book_images.yaml  pyproject.toml  requirements.txt
scripts/: backfill_completions.py  build.sh  ddl.sql
src/: app.py  config.py  models.py  repository.py  ui.py  utils.py
